<resources>
    <string name="app_name" parent="Theme.AppCompat.Light.NoActionBar">page2

        <item name="colorPrimary">@color/colorPrimary</item>
        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
        <item name="colorAccent">@color/colorAccent</item>

    </string>
    <string name="entr_the_otp_sent_to">entr_the_otp_sent_to</string>
    <string name="otp_verification">otp_verification</string>
    <string name="get_otp">get_otp</string>
    <string name="_123456789">123456789</string>
    <string name="_212">212</string>
    <string name="mobile_number">mobile_number</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number">we will send you an one time Password on this mobile number</string>
    <string name="otpverification">OTP_verification</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="didn_t_receive_the_otp">didn\'t receive the otp</string>
    <string name="resend_otp">resend otp</string>
    <string name="verify">verify</string>
    <string name="todo">TODO</string>
</resources>