<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:overScrollMode="never"
    android:context=".sendOTPActivity"
    tools:ignore="ScrollViewCount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/recieved"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otpverification"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/we_will_send_you_an_one_time_password_on_this_mobile_number"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="@string/mobile_number"
            android:textColor="@color/colorTextsecondary"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/_212"
            android:textColor="@color/colorTextPrimary"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@null"
            android:hint="@string/_123456789"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="@color/colorTextPrimary"
            android:textSize="11sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:background="@color/colorDivider"/>
    <Button
        android:id="@+id/buttonGetOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/background_button"
        android:text="@string/get_otp"
        android:textColor="@color/colorwhite"
        android:textSize="16sp"
        android:textStyle="bold"/>



</ScrollView>